--- a/apps/feedback-server/.env.example
+++ b/apps/feedback-server/.env.example
@@ -1,5 +1,9 @@
-SERVER_SECRET=<server-secret>
+SERVER_SECRET=<server-secret: `openssl rand -base64 32`>
 SERVER_ALLOWED_ORIGINS='http://localhost:3000,https://developer.tbd.website'
-GOOGLE_SPREADSHEET_ID=<spreadsheet-id>
-GOOGLE_CLIENT_EMAIL=<client-email>
-GOOGLE_PRIVATE_KEY=<private-key-pem>
+
+# postgres db config
+# DB_CONNECTION=localhost
+# DB_USER=postgres
+# DB_PASSWORD=postgres
+# DB_PORT=5432
+# DB_DATABASE=feedback-server
