--- a/apps/feedback-server/package.json
+++ b/apps/feedback-server/package.json
@@ -11,9 +11,9 @@
   "dependencies": {
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csrf-csrf": "^3.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-session": "^1.17.3",
     "pg": "^8.11.3"
   },
   "devDependencies": {
