--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 "scripts": {
   "preinstall": "node propagateWeb5.js && npx only-allow pnpm",
   "start": "node extract-snippets && pnpm --filter site run start",
+  "start:feedback-server": "pnpm --filter feedback-server run start",
   "start:tutorial-todo-starter": "pnpm --filter todo-starter run dev",
   "start:tutorial-todo-completed": "pnpm --filter todo-completed run dev",
   "start:widget": "pnpm --filter web5-quickstart-widgets start",
@@ -11,11 +12,16 @@
   "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
 },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@web5/api": "0.8.1",
+    "font-awesome": "^4.7.0",
+    "react-fontawesome": "^1.7.1",
+    "react-markdown": "^8.0.7",
     "node-fetch": "^3.3.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1",
-    "@web5/api": "0.8.1",
-    "react-markdown": "8.0.7"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@vitest/browser": "0.33.0",
