Issue #1270: Suite of Security Vulnerability Fixes
This commit in combination with the Docusaurus upgrade in #1274 resolves
all security vulnerabilities in developer.tbd.website

It contains upgrades or forced transitive resolution to:
* vitest:0.34.1
* vite:5.1.4
* nuxt:3.10.3
* postcss:8.14.31
* create-server-and-test:2.0.3, which in turn fixes axios to 1.6.x and
  makes the two compatible

This also introduces a .nvmrc to more easily let contributors build on
the correct Node version

--- a/package.json
+++ b/package.json
@@ -47,15 +47,22 @@
     "express": "4.18.2"
   },
   "devDependencies": {
-    "@vitest/browser": "0.33.0",
-    "@vitest/coverage-istanbul": "0.33.0",
+    "@vitest/browser": "0.34.1",
+    "@vitest/coverage-istanbul": "0.34.1",
     "fake-indexeddb": "4.0.2",
     "glob": "10.3.10",
     "husky": "8.0.3",
     "playwright": "1.39.0",
-    "start-server-and-test": "2.0.2",
-    "vitest": "0.33.0",
+    "start-server-and-test": "2.0.3",
+    "vitest": "0.34.1",
     "webdriverio": "8.13.13",
     "rimraf": "5.0.5"
+  },
+  "pnpm": {
+    "overrides": {
+      "vite": "5.1.4",
+      "nuxt" : "3.10.3",
+      "postcss": "8.4.31"
+    }
   }
 }
